--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-image: url('https://raw.githubusercontent.com/cosmonitoramento/natal_tema/refs/heads/main/papai%20noel.png');
+      background-image: url('');
       background-size: cover;
       background-position: center;
       opacity: 0.3;
@@ -323,3 +323,4 @@
   </script>
 </body>
 </html>
+
