--- a/index.html
+++ b/index.html
@@ -11,47 +11,15 @@
       box-sizing: border-box;
     }
 
-    :root {
-      --christmas-gold: #ffd700;
-    }
-
     body {
       min-height: 100vh;
       background: linear-gradient(135deg, #0a1428 0%, #1a0a0a 50%, #0a1428 100%);
-      font-family: 'Inter', system-ui, -apple-system, sans-serif;
+      font-family: system-ui, -apple-system, sans-serif;
       overflow: hidden;
       position: relative;
     }
 
-    /* Imagem de fundo */
-    body::before {
-      content: '';
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: url('');
-      background-size: cover;
-      background-position: center;
-      opacity: 0.3;
-      z-index: 0;
-      filter: brightness(0.8);
-    }
-
-    /* Overlay escuro */
-    body::after {
-      content: '';
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: radial-gradient(circle at center, rgba(10, 20, 40, 0.4) 0%, rgba(10, 20, 40, 0.7) 100%);
-      z-index: 1;
-    }
-
-    /* Neve caindo */
+    /* Neve caindo - LEVE */
     .snowflakes {
       position: fixed;
       top: 0;
@@ -67,260 +35,84 @@
       position: absolute;
       top: -10px;
       color: white;
-      font-size: 1.5em;
+      font-size: 1.2em;
       animation: fall linear infinite;
-      opacity: 0.9;
-      text-shadow: 0 0 5px rgba(255, 255, 255, 0.8);
+      opacity: 0.8;
+      text-shadow: 0 0 3px rgba(255, 255, 255, 0.5);
+      will-change: transform;
     }
+
+    /* Apenas 20 flocos para não pesar */
+    .snowflake:nth-child(1) { left: 5%; animation-duration: 10s; animation-delay: 0s; }
+    .snowflake:nth-child(2) { left: 10%; animation-duration: 12s; animation-delay: 1s; }
+    .snowflake:nth-child(3) { left: 15%; animation-duration: 11s; animation-delay: 2s; }
+    .snowflake:nth-child(4) { left: 20%; animation-duration: 13s; animation-delay: 0.5s; }
+    .snowflake:nth-child(5) { left: 25%; animation-duration: 10s; animation-delay: 1.5s; }
+    .snowflake:nth-child(6) { left: 30%; animation-duration: 12s; animation-delay: 2.5s; }
+    .snowflake:nth-child(7) { left: 35%; animation-duration: 11s; animation-delay: 0.8s; }
+    .snowflake:nth-child(8) { left: 40%; animation-duration: 13s; animation-delay: 1.8s; }
+    .snowflake:nth-child(9) { left: 45%; animation-duration: 10s; animation-delay: 2.2s; }
+    .snowflake:nth-child(10) { left: 50%; animation-duration: 12s; animation-delay: 0.3s; }
+    .snowflake:nth-child(11) { left: 55%; animation-duration: 11s; animation-delay: 3s; }
+    .snowflake:nth-child(12) { left: 60%; animation-duration: 13s; animation-delay: 1.2s; }
+    .snowflake:nth-child(13) { left: 65%; animation-duration: 10s; animation-delay: 2.8s; }
+    .snowflake:nth-child(14) { left: 70%; animation-duration: 12s; animation-delay: 0.7s; }
+    .snowflake:nth-child(15) { left: 75%; animation-duration: 11s; animation-delay: 1.9s; }
+    .snowflake:nth-child(16) { left: 80%; animation-duration: 13s; animation-delay: 2.3s; }
+    .snowflake:nth-child(17) { left: 85%; animation-duration: 10s; animation-delay: 0.9s; }
+    .snowflake:nth-child(18) { left: 90%; animation-duration: 12s; animation-delay: 1.6s; }
+    .snowflake:nth-child(19) { left: 95%; animation-duration: 11s; animation-delay: 2.1s; }
+    .snowflake:nth-child(20) { left: 8%; animation-duration: 13s; animation-delay: 0.4s; }
 
     @keyframes fall {
       0% {
         top: -10%;
-        opacity: 0.9;
+        opacity: 0;
+        transform: translateX(0) rotate(0deg);
+      }
+      10% {
+        opacity: 0.8;
+      }
+      90% {
+        opacity: 0.6;
       }
       100% {
         top: 110%;
-        opacity: 0.2;
-      }
-    }
-
-    /* Brilhos dourados flutuantes */
-    .golden-lights {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      z-index: 2;
-      overflow: hidden;
-    }
-
-    .golden-light {
-      position: absolute;
-      width: 3px;
-      height: 3px;
-      background: var(--christmas-gold);
-      border-radius: 50%;
-      box-shadow: 
-        0 0 10px var(--christmas-gold),
-        0 0 20px var(--christmas-gold),
-        0 0 30px var(--christmas-gold);
-      animation: float-light linear infinite;
-      opacity: 0;
-    }
-
-    @keyframes float-light {
-      0% {
         opacity: 0;
-        transform: translateY(0) scale(0);
-      }
-      10% {
-        opacity: 1;
-        transform: translateY(-20px) scale(1);
-      }
-      90% {
-        opacity: 1;
-        transform: translateY(-80vh) scale(1);
-      }
-      100% {
-        opacity: 0;
-        transform: translateY(-100vh) scale(0);
+        transform: translateX(50px) rotate(180deg);
       }
     }
 
-    /* Partículas douradas maiores */
-    .sparkle {
-      position: absolute;
-      width: 4px;
-      height: 4px;
-      background: var(--christmas-gold);
-      border-radius: 50%;
-      box-shadow: 
-        0 0 15px var(--christmas-gold),
-        0 0 30px var(--christmas-gold);
-      animation: sparkle-animation linear infinite;
-    }
-
-    @keyframes sparkle-animation {
-      0% {
-        opacity: 0;
-        transform: scale(0) rotate(0deg);
-      }
-      50% {
-        opacity: 1;
-        transform: scale(1.5) rotate(180deg);
-      }
-      100% {
-        opacity: 0;
-        transform: scale(0) rotate(360deg);
-      }
-    }
-
-    /* Efeito de aurora dourada */
-    .aurora {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: 
-        radial-gradient(ellipse at 20% 30%, rgba(255, 215, 0, 0.1) 0%, transparent 50%),
-        radial-gradient(ellipse at 80% 70%, rgba(255, 215, 0, 0.08) 0%, transparent 50%),
-        radial-gradient(ellipse at 50% 50%, rgba(255, 215, 0, 0.05) 0%, transparent 60%);
-      z-index: 1;
-      animation: aurora-move 15s ease-in-out infinite alternate;
-      pointer-events: none;
-    }
-
-    @keyframes aurora-move {
-      0% {
-        transform: translateX(-30px) translateY(-30px);
-        opacity: 0.6;
-      }
-      50% {
-        transform: translateX(20px) translateY(20px);
-        opacity: 1;
-      }
-      100% {
-        transform: translateX(-20px) translateY(-10px);
-        opacity: 0.7;
-      }
-    }
-
-    /* Pulso de luz dourada no centro */
-    .center-glow {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 300px;
-      height: 300px;
-      background: radial-gradient(circle, rgba(255, 215, 0, 0.15) 0%, transparent 70%);
-      border-radius: 50%;
-      z-index: 1;
-      animation: pulse-glow 4s ease-in-out infinite;
-      pointer-events: none;
-    }
-
-    @keyframes pulse-glow {
-      0%, 100% {
-        transform: translate(-50%, -50%) scale(1);
-        opacity: 0.5;
-      }
-      50% {
-        transform: translate(-50%, -50%) scale(1.3);
-        opacity: 1;
-      }
-    }
-
-    /* Raios de luz */
-    .light-rays {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 2px;
-      height: 100vh;
-      background: linear-gradient(to bottom, transparent 0%, rgba(255, 215, 0, 0.1) 50%, transparent 100%);
-      z-index: 1;
-      pointer-events: none;
-    }
-
-    .light-rays:nth-child(1) {
-      transform: translate(-50%, -50%) rotate(0deg);
-      animation: rotate-rays 20s linear infinite;
-    }
-
-    .light-rays:nth-child(2) {
-      transform: translate(-50%, -50%) rotate(60deg);
-      animation: rotate-rays 20s linear infinite;
-    }
-
-    .light-rays:nth-child(3) {
-      transform: translate(-50%, -50%) rotate(120deg);
-      animation: rotate-rays 20s linear infinite;
-    }
-
-    @keyframes rotate-rays {
-      0% {
-        transform: translate(-50%, -50%) rotate(0deg);
-      }
-      100% {
-        transform: translate(-50%, -50%) rotate(360deg);
+    @media (prefers-reduced-motion: reduce) {
+      .snowflake {
+        animation: none;
       }
     }
   </style>
 </head>
 <body>
-  <!-- Aurora dourada -->
-  <div class="aurora"></div>
-
-  <!-- Pulso central -->
-  <div class="center-glow"></div>
-
-  <!-- Raios de luz -->
-  <div class="light-rays"></div>
-  <div class="light-rays"></div>
-  <div class="light-rays"></div>
-
-  <!-- Brilhos dourados -->
-  <div class="golden-lights" id="goldenLights"></div>
-
-  <!-- Neve caindo -->
-  <div class="snowflakes" id="snowflakes"></div>
-
-  <script>
-    // Criar neve caindo
-    function createSnowflakes() {
-      const snowflakesContainer = document.getElementById('snowflakes');
-      const snowflakeChars = ['❄', '❅', '❆', '✻', '✼', '❇', '❈', '❉'];
-      const numberOfSnowflakes = 80;
-
-      for (let i = 0; i < numberOfSnowflakes; i++) {
-        const snowflake = document.createElement('div');
-        snowflake.classList.add('snowflake');
-        snowflake.textContent = snowflakeChars[Math.floor(Math.random() * snowflakeChars.length)];
-        snowflake.style.left = Math.random() * 100 + '%';
-        snowflake.style.animationDuration = (Math.random() * 3 + 4) + 's';
-        snowflake.style.animationDelay = Math.random() * 2 + 's';
-        snowflake.style.fontSize = (Math.random() * 1 + 1) + 'em';
-        snowflakesContainer.appendChild(snowflake);
-      }
-    }
-
-    // Criar brilhos dourados flutuantes
-    function createGoldenLights() {
-      const goldenLightsContainer = document.getElementById('goldenLights');
-      const numberOfLights = 30;
-
-      for (let i = 0; i < numberOfLights; i++) {
-        const light = document.createElement('div');
-        light.classList.add('golden-light');
-        light.style.left = Math.random() * 100 + '%';
-        light.style.bottom = '-20px';
-        light.style.animationDuration = (Math.random() * 4 + 6) + 's';
-        light.style.animationDelay = Math.random() * 5 + 's';
-        goldenLightsContainer.appendChild(light);
-      }
-
-      // Adicionar partículas douradas que piscam
-      const numberOfSparkles = 20;
-      for (let i = 0; i < numberOfSparkles; i++) {
-        const sparkle = document.createElement('div');
-        sparkle.classList.add('sparkle');
-        sparkle.style.left = Math.random() * 100 + '%';
-        sparkle.style.top = Math.random() * 100 + '%';
-        sparkle.style.animationDuration = (Math.random() * 2 + 2) + 's';
-        sparkle.style.animationDelay = Math.random() * 3 + 's';
-        goldenLightsContainer.appendChild(sparkle);
-      }
-    }
-
-    // Inicializar
-    createSnowflakes();
-    createGoldenLights();
-  </script>
+  <!-- Neve caindo - apenas 20 flocos -->
+  <div class="snowflakes">
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❄</div>
+    <div class="snowflake">❅</div>
+  </div>
 </body>
 </html>
-
